--- a/params/mpu6050.yaml
+++ b/params/mpu6050.yaml
@@ -15,3 +15,5 @@ mpu6050driver_node:
     accel_y_offset: 0.0 # [m/s²]
     accel_z_offset: 0.0 # [m/s²]
     frequency: 100 # [Hz]
+    topic: imu/dara_raw
+    frame: imu_link
