--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>mpu6050driver</name>
+  <name>mpu6050_driver_node</name>
   <version>0.0.1</version>
   <description>A ROS2 package that converts raw data from an MPU6050 to /imu format.</description>
   <maintainer email="hiwad.aziz@gmx.de">Hiwad Aziz</maintainer>
